--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+  <div><script async src="https://cse.google.com/cse.js?cx=144abc50f225152b8"></script>
+<div class="gcse-search"></div></div>
 
 </body>
 </html>
